correction W3C / interaction mobile et contraste

--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-cite {
+cite,
+blockquote {
     font-size: 16px;
+    color: black;
 }
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -93,7 +96,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc button:hover {
@@ -126,7 +129,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, .7);
 }
 
 .d-bloc .a-btn:hover,
@@ -765,7 +768,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #CB4C11;
 }
 
 .tc-white {
@@ -774,7 +777,8 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    /*background: #F3976C;*/
+    background: #CB4C11;
     color: #FFFFFF!important;
 }
 
@@ -843,13 +847,23 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
+    a,
+    .fa,
+    ul > li,
+    nav > ul > li {
+        padding: 15px;
+        font-size: 18px;
+    }
+    .icon-md {
+        font-size: 50px!important;
+    }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -867,10 +881,6 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -879,8 +889,16 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+    }
+    a,
+    .fa,
+    ul > li,
+    nav > ul > li {
+        padding: 17px;
+        font-size: 18px;
+    }
+    .icon-md {
+        font-size: 50px!important;
     }
 }
 
@@ -924,6 +942,7 @@ h4 {
         background: rgba(0, 0, 0, .05);
         text-align: left;
         padding-left: 15px;
+        padding-top: 10px;
         width: 100%;
     }
     .nav > li:hover {
